добавлен сам апач **ть

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,7 +3,7 @@ server {
  
     server_name api.com www.api.com;
  
-    root /srv/www/api;
+    root /srv/www/laravel/public;
  
     location ~ \.php$ {
         try_files $uri =404;
