--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         ports:
             - 9000:9000
         volumes:
-            - ./:/srv/www/api
+            - ./:/srv/www/laravel/public
             - ./docker/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
  
     nginx:
@@ -16,10 +16,17 @@ services:
         ports:
             - 80:80
         volumes:
-            - ./:/srv/www/api
+            - ./:/srv/www/laravel/public
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
         depends_on:
+            - apache
+
+    apache:
+        image: httpd:2.4
+        depends_on:
             - php
+        volumes:
+            - /:/srv/www/laravel/public
  
     mysql:
         image: mysql
